--- a/packages/snap/snap.manifest.json
+++ b/packages/snap/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/MetaMask/template-snap-monorepo.git"
   },
   "source": {
-    "shasum": "w6U/S41ex1qqfj8JTvbvr8xUrooUeb1XjJOHH1J7SoU=",
+    "shasum": "dYybICcFHDYvP5vk3GkecaQuFX9EeKuSgaIWmHwoYzA=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -17,10 +17,14 @@
     }
   },
   "initialPermissions": {
+    "endowment:network-access": {},
+    "endowment:name-lookup": {
+      "chains": ["eip155:22988"]
+    },
     "snap_dialog": {},
     "endowment:rpc": {
       "dapps": true,
-      "snaps": false
+      "snaps": true
     }
   },
   "platformVersion": "6.18.0",
